server/compilers/goLiteJS/src/test/ml1/invalid/decl12.go
// missing comma
package main

var x1 x2 int
